--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.14.x",
+    "mongodb": "^2.2.22",
     "jade": "*"
   },
   "engines": {
